Fixed flickering of main_menu + other minor css changes.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -22,6 +22,10 @@
 
 }
 
+.subMenu{
+  display: none;
+}
+
 .subMenu div{
   margin: 0 auto;
   text-align: center;
